# Local_Password_Manager

./: .gitignore  README.md  package.json  vite.config.ts
.github/workflows/: audit.yml  release.yml
app/: package-lock.json
app/src/: App.tsx
app/src-tauri/: Cargo.toml
app/src-tauri/src/: auth.rs  db.rs  main.rs  profiles.rs  sync.rs  vault.rs
app/src-tauri/src/ble/: mod.rs  pairing.rs  transfer.rs
app/src/components/: Dashboard.tsx
app/src/types/: index.ts
src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: ble_sync.rs  database.rs  main.rs  security.rs  totp.rs
src/components/: AddEntry.tsx  Dashboard.tsx  Setup.tsx  Sidebar.tsx  SyncDashboard.tsx  UnlockScreen.tsx  VaultCreate.tsx  VaultDetail.tsx  VaultItem.tsx  VaultList.tsx
src/types/: index.ts
vibevault-desktop/: eslint.config.js  index.html  package-lock.json  package.json
vibevault-desktop/app/src-tauri/: Cargo.toml
vibevault-desktop/app/src-tauri/src/: db.rs  sync.rs
vibevault-desktop/app/src-tauri/src/ble/: protocol.rs
vibevault-desktop/src/: App.tsx
vibevault-desktop/src-tauri/: Cargo.toml  tauri.conf.json
vibevault-desktop/src-tauri/src/: auth.rs  crypto.rs  db.rs  main.rs
vibevault-desktop/src-tauri/src/ble/: pairing.rs  peripheral.rs
vibevault-desktop/src/components/: Dashboard.tsx
vibevault-desktop/src/types/: index.ts
vibevault-ios/: Package.swift
vibevault-ios/VibeVault/: Info.plist
vibevault-ios/VibeVault/App/: ContentView.swift  VibeVaultApp.swift
vibevault-ios/VibeVault/Bluetooth/: BLECentralManager.swift  BLEProtocol.swift  SyncOrchestrator.swift
vibevault-ios/VibeVault/Models/: PairedDevice.swift  Profile.swift  User.swift  VaultEntry.swift
vibevault-ios/VibeVault/Services/: AuthService.swift  CryptoService.swift  DatabaseService.swift  KeychainService.swift
vibevault-ios/VibeVault/Views/Auth/: LoginView.swift  RegisterView.swift
vibevault-ios/VibeVault/Views/Sync/: SyncView.swift
vibevault-ios/VibeVault/Views/Vault/: AddEntryView.swift  EntryDetailView.swift  VaultListView.swift
